--- a/_posts/2018-10-22-resume.markdown
+++ b/_posts/2018-10-22-resume.markdown
@@ -5,4 +5,4 @@ title: "My Resume"
 date: 2018-10-22 14:00:00 +0800
 ---
 
-I am **Li Mengdi**, a master condidate for Computer Science. My interest is in Machine Learning, Deep Learning and Multimedia Processing. Currently, I am looking for a PhD position. Here is my [Resume](/assets/CV.pdf). You can find the link to my paper published in my resume. Thanks for your time!
+I am **Li Mengdi**, a master condidate for Computer Science in China Agricultural University. My research interest is in Machine Learning applications to Multimedia Security, Deep Learning and Multimedia Processing. I am looking for a PhD position currently. Here is my [Resume](/assets/CV.pdf) and you can find the link to my research paper in it. Thanks for your attention!
